@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: init.test,v 1.9.4.1 2003/06/27 15:10:11 dgp Exp $
+# RCS: @(#) $Id: init.test,v 1.9.4.2 2003/06/27 19:10:08 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -66,10 +66,6 @@ interp eval $testInterp [list package require tcltest]
 interp eval $testInterp [list namespace import -force ::tcltest::*]
 
 interp eval $testInterp {
-
-if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
-}
 
 auto_reset
 catch {rename parray {}}
@@ -201,6 +197,7 @@ foreach arg [subst -nocommands -novariables {
     incr count
 }
 
+cleanupTests
 }	;#  End of [interp eval $testInterp]
 
 # cleanup
